--- a/lol/templates/lol/index.html
+++ b/lol/templates/lol/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HOLA MUNDO</h1>
+    <h1>LETI LA MAS LINDA</h1>
     <p>{{ mensaje }}</p>
 </body>
 </html>
