--- a/blog/templates/blog/posta_list.html
+++ b/blog/templates/blog/posta_list.html
@@ -5,13 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
-   <ul>
+    <nav>
+        <a href="#"> Mi sitio</a>
+        <button>
+            <span></span>
+        </button>
+        <div>
+          <ul>
+            <li>
+              <a herf="#">Inicio</a>  
+            </li>
+            <li>
+                <a href="/blog/">Blog</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
     <hi>Lista de postas</hi>
     {% for posta in postas  %}
         <li> {{ posta.titulo}} dice: {{posta.contenido}} y se creo en; {{posta.fecha_creacion}}</li>
     {% endfor %}
    </ul> 
+    </nav>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
